--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "gulp-nodemon": "^2.1.0",
     "gulp-parker": "^0.1.0",
     "gulp-pleeease": "^2.0.2",
+    "gulp-print": "^2.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.1",
     "gulp-sass-glob": "^1.0.6",
