--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "3.0.2",
     "eslint-plugin-react": "6.10.3",
-    "jest": "^20.0.1"
+    "jest": "^20.0.1",
+    "sass-module-importer": "^1.4.0"
   },
   "dependencies": {
     "ase-utils": "^0.1.1",
