--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "lodash": "^4.0.0",
     "map-stream": "0.0.6",
     "marked": "^0.3.5",
+    "mkdirp": "^0.5.1",
     "normalize.css": "^5.0.0",
     "nunjucks": "github:springload/nunjucks#v3.0.0-jinja2-macros-kwargs-variable",
     "sass-module-importer": "^1.4.0",
