--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "test": "jest",
     "test:watch": "jest --coverage --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "npm run lint -s && npm run test -s",
+    "test:ci": "npm run lint -s && npm run test:coverage -s",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "pages": "rm -rf pages && cp -R examples pages",
     "deploy": "./bin/deploy.sh"
