--- a/examples/intro/package.json
+++ b/examples/intro/package.json
@@ -7,6 +7,10 @@
   "author": "Springload",
   "main": "index.js",
   "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/springload/rikki-patterns"
+  },
   "devDependencies": {
 
   },
@@ -14,7 +18,6 @@
 
   },
   "scripts": {
-    "patterns": "../../src/bin/rikki.js",
     "patterns:start": "../../src/bin/rikki.js start",
     "patterns:component": "../../src/bin/rikki.js component --name",
     "patterns:uncomponent": "../../src/bin/rikki.js uncomponent --name"
