--- a/package.json
+++ b/package.json
@@ -28,13 +28,7 @@
   },
   "homepage": "http://springload.github.io/rikki-patterns/",
   "eslintConfig": {
-    "extends": "springload",
-    "rules": {
-      "comma-dangle": [
-        "error",
-        "always-multiline"
-      ]
-    }
+    "extends": "plugin:springload/prettier"
   },
   "jest": {
     "testPathIgnorePatterns": [
@@ -46,11 +40,9 @@
   "devDependencies": {
     "coveralls": "^2.13.1",
     "eslint": "^3.19.0",
-    "eslint-config-springload": "1.0.2",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "3.0.2",
-    "eslint-plugin-react": "6.10.3",
+    "eslint-plugin-springload": "^2.0.4",
     "jest": "^20.0.1",
+    "prettier": "^1.6.0",
     "sass-module-importer": "^1.4.0"
   },
   "dependencies": {
@@ -90,6 +82,8 @@
     "lint:versions": "NVM_VERSION=$(cat .nvmrc); NODE_VERSION=$(node --version); echo $NODE_VERSION | grep -q $NVM_VERSION && echo \"✓ running node $NODE_VERSION - all clear\" || (echo \"✗ running node $NODE_VERSION - expected $NVM_VERSION. Use nvm to install the right version.\" && exit 1)",
     "lint:js": "npm run linter:js -s -- .",
     "lint": "npm run lint:versions -s && npm run lint:js -s",
+    "formatter:js": "prettier",
+    "format": "npm run formatter:js -- --write src/**/*.js",
     "test": "jest",
     "test:watch": "jest --coverage --watch",
     "test:coverage": "jest --coverage",
