--- a/package.json
+++ b/package.json
@@ -78,12 +78,14 @@
     "yargs": "^8.0.1"
   },
   "scripts": {
-    "linter:js": "eslint",
     "lint:versions": "NVM_VERSION=$(cat .nvmrc); NODE_VERSION=$(node --version); echo $NODE_VERSION | grep -q $NVM_VERSION && echo \"✓ running node $NODE_VERSION - all clear\" || (echo \"✗ running node $NODE_VERSION - expected $NVM_VERSION. Use nvm to install the right version.\" && exit 1)",
+    "linter:js": "eslint",
     "lint:js": "npm run linter:js -s -- .",
-    "lint": "npm run lint:versions -s && npm run lint:js -s",
+    "linter:css": "prettier --list-different",
     "formatter:js": "prettier",
-    "format": "npm run formatter:js -- --write src/**/*.js",
+    "formatter:css": "prettier",
+    "lint": "npm run lint:versions -s && npm run lint:js -s",
+    "format": "npm run formatter:js -- --write src/**/*.js && npm run formatter:scss -- --write src/**/*.scss",
     "test": "jest",
     "test:watch": "jest --coverage --watch",
     "test:coverage": "jest --coverage",
