Update formatting commands

--- a/package.json
+++ b/package.json
@@ -78,10 +78,10 @@
     "linter:js": "eslint",
     "lint:js": "npm run linter:js -s -- .",
     "linter:css": "prettier --list-different",
-    "formatter:js": "prettier",
-    "formatter:css": "prettier",
+    "formatter:js": "prettier --write",
+    "formatter:css": "prettier --write",
     "lint": "npm run lint:versions -s && npm run lint:js -s",
-    "format": "npm run formatter:js -s -- --write src/**/*.js && npm run formatter:scss -s -- --write src/**/*.scss",
+    "format": "npm run formatter:js -s -- src/**/*.js && npm run formatter:scss -s -- src/**/*.scss",
     "test": "jest",
     "test:watch": "jest --coverage --watch",
     "test:coverage": "jest --coverage",
