--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sass-module-importer": "^1.4.0"
   },
   "dependencies": {
+    "@springload/nunjucks": "3.0.2",
     "ase-utils": "^0.1.1",
     "body-parser": "^1.15.1",
     "color": "^0.11.1",
@@ -70,7 +71,6 @@
     "marked": "^0.3.5",
     "mkdirp": "^0.5.1",
     "normalize.css": "^5.0.0",
-    "nunjucks": "github:springload/nunjucks#v3.0.0-jinja2-macros-kwargs-variable",
     "read-pkg-up": "^1.0.1 || ^2.0.0",
     "sass-module-importer": "^1.4.0",
     "slugify": "^1.1.0",
