--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,13 @@ language: node_js
 cache:
   directories:
   - node_modules
+install:
+- npm install
+- npm install -g coveralls
 script:
 - npm run test:ci
 after_success:
-- npm run coveralls
+- cat ./coverage/lcov.info | coveralls
 branches:
   except:
   - gh-pages
